Improve readabilty and fix issue with long list of names.

--- a/semantic/src/definitions/elements/button.less
+++ b/semantic/src/definitions/elements/button.less
@@ -1658,7 +1658,7 @@
 .ui.blue.buttons .button,
 .ui.blue.button {
   background-color: @blue;
-  color: @blueTextColor;
+  color: rgb(38, 50, 135);
   text-shadow: @blueTextShadow;
   background-image: @coloredBackgroundImage;
 }
